# overcooked-rust

./: Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/src/: action.rs  actor.rs  dyn_ord.rs  dyn_partial_eq.rs  dyn_partial_ord.rs  execution_context.rs  global_state.rs  lib.rs
core/src/actor/: actor_factory.rs  actor_state.rs  actor_state_extractor.rs  local_state.rs
core/src/derives/: dyn_ord.rs  dyn_partial_eq.rs
core/src/test_utils/: test_actor_states.rs
crates/overcooked-core/: Cargo.toml
crates/overcooked-core/src/: action.rs  actor.rs  config.rs  derives.rs  execution_context.rs  global_state.rs  lib.rs  state_machine.rs  state_machine_driver.rs  test_utils.rs  transition.rs  transition_computer.rs
crates/overcooked-core/src/action/: action_executor.rs  action_template_executor.rs  lambda_proxy.rs
overcooked-core/: Cargo.toml
overcooked-core/src/: action.rs  actor.rs  global_state.rs
overcooked-core/src/actor/: local_state.rs
overcooked-core/src/derives/: dyn_hash.rs
overcooked-core/src/test_utils/: test_actor_states.rs
overcooked-sample/: Cargo.toml
overcooked-sample/src/: jug.rs  two_phase_commit.rs
overcooked-sample/src/jug/: simple_jug.rs
overcooked-sample/src/two_phase_commit/: model.rs
overcooked-sample/src/two_phase_commit/model/resource_manager/: simple_resource_manager.rs
overcooked-sample/src/two_phase_commit/model_verification/: in_memory_resource_manager_state_store.rs
sample/: Cargo.toml
sample/src/: lib.rs
sample/src/jug/: simple_jug.rs
sample/src/two_phase_commit/: model_verification.rs
(+17 files in other folders)
