[package]
name = "overcooked-sample"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
mockall = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

overcooked-core = { path = "../overcooked-core" }

[dev-dependencies]
lazy_static = { workspace = true }
test-case = { workspace = true }